maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:32: error: not found: value a
  if (getIndication(a,y) != 9999) avance();
                    ^